Fixed roll buttons (label was too big, used plain text)

--- a/Psi-Punk/psipunk.css
+++ b/Psi-Punk/psipunk.css
@@ -19,3 +19,7 @@
     input.sheet-gift, input.sheet-fault {
         width: 100%;
     }
+
+    button label {
+        
+    }
